--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,4 @@ classifiers = ["License :: OSI Approved :: MIT License"]
 requires = [ "alive-progress==1.6.1", "rdflib==5.0.0", "rdflib-jsonld==0.5.0", "requests==2.24.0"]
 
 [tool.flit.scripts]
-realpython = "gutenburg.__main__:main"
+gutenburg = "gutenburg.__main__:main"
